<resources>
    <string name="app_name">ActivityLifeCycle</string>
    <string name="counter">Counter</string>
    <string name="_0">0</string>
    <string name="click">Click</string>
    <string name="moveactivity2">moveActivity2</string>
    <string name="moveactivity3">moveActivity3</string>
    <string name="activity_2">Activity 2</string>
    <string name="activity_3">Activity 3</string>
</resources>