<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#C800F9"
            android:text="@string/counter"
            android:textColor="#2D2F31" />

        <TextView
            android:id="@+id/textViewCounter"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#C800F9"
            android:text="@string/_0"
            android:textColor="#06251D"
            android:textSize="40sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click"
            android:onClick="count"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonActivity2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moveactivity2"
            android:onClick="moveActivity2"/>

        <Button
            android:id="@+id/buttonActivity3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moveactivity3"
            android:onClick="moveActivity3"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>